layout 71 percent done

--- a/movies-dc.html
+++ b/movies-dc.html
@@ -35,7 +35,7 @@
                 <button id="addMovie">Add Movie</button>
             </div>
             <div class="column center parent">
-                <button id="toggle">/\</button>
+                <button class="button-toggle" id="toggle">/\</button>
             </div>
         </div>
     </div>
