--- a/movies-dc.html
+++ b/movies-dc.html
@@ -9,6 +9,9 @@
 </head>
 <body>
 <div class="page-wrapper">
+    <div class="page">
+    </div>
+    <div id="loading"></div>
     <div class="container header">
         <div class="row full-width">
             <div class="column left">
@@ -31,7 +34,17 @@
     </div>
     <div class="container footer">
         <div class="row grow">
-            <div class="column left">
+            <div id="addInterface" class="column left">
+                <input id="title" type="text" placeholder="Title"/>
+                <select id="genre">
+                    <option value="Crime">Crime</option>
+                    <option value="Drama">Drama</option>
+                    <option value="Comedy">Comedy</option>
+                    <option value="Fantasy">Fantasy</option>
+                    <option value="SciFi">SciFi</option>
+                    <option value="Horror">Horror</option>
+                </select>
+                <input id="rating" type="number" min="0" max="5">
                 <button id="addMovie">Add Movie</button>
             </div>
             <div class="column center parent">
@@ -40,6 +53,7 @@
         </div>
     </div>
 </div>
+
 
 <script type="module" src="js/movies-js-dc.js"></script>
 </body>
