--- a/movies-dc.html
+++ b/movies-dc.html
@@ -18,8 +18,8 @@
                 <h1>Movies</h1>
             </div>
             <div class="column right">
-                <label for="searchMovie">Search Movie</label>
-                <input type="text" id="searchMovie">
+                <label class="align" for="searchMovie">Search Movie</label>
+                <input class="options2" type="text" id="searchMovie">
             </div>
         </div>
     </div>
@@ -34,9 +34,9 @@
     </div>
     <div class="container footer">
         <div class="row grow">
-            <div id="addInterface" class="column left">
-                <input id="title" type="text" placeholder="Title"/>
-                <select id="genre">
+            <div id="addInterface" class="column left foot">
+                <input class="options" id="title" type="text" placeholder="Title"/>
+                <select class="options" id="genre">
                     <option value="Crime">Crime</option>
                     <option value="Drama">Drama</option>
                     <option value="Comedy">Comedy</option>
@@ -44,8 +44,8 @@
                     <option value="SciFi">SciFi</option>
                     <option value="Horror">Horror</option>
                 </select>
-                <input id="rating" type="number" min="0" max="5">
-                <button id="addMovie">Add Movie</button>
+                <input class="options" id="rating" type="number" min="0" max="5">
+                <button class="options" id="addMovie">Add Movie</button>
             </div>
             <div class="column center parent">
                 <button class="button-toggle" id="toggle">/\</button>
