--- a/movies-dc.html
+++ b/movies-dc.html
@@ -9,8 +9,7 @@
 </head>
 <body>
 <div class="page-wrapper">
-    <div class="page">
-    </div>
+    <div class="page"></div>
     <div id="loading"></div>
     <div class="container header">
         <div class="row full-width">
@@ -22,6 +21,13 @@
                 <input class="options2" type="text" id="searchMovie">
             </div>
         </div>
+    </div>
+    <div class="container genre-container" id="movies">
+        <p class="genre-link" data-genre="Action">Action</p>
+        <p class="genre-link" data-genre="Comedy">Comedy</p>
+        <p class="genre-link" data-genre="Drama">Drama</p>
+        <p class="genre-link" data-genre="Horror">Horror</p>
+        <p class="genre-link" data-genre="Sci-Fi">Sci-Fi</p>
     </div>
     <div class="container grow">
         <div class="row grow">
@@ -44,7 +50,7 @@
                     <option value="SciFi">SciFi</option>
                     <option value="Horror">Horror</option>
                 </select>
-                <input class="options" id="rating" type="number" min="0" max="5">
+                <input class="options" id="rating" type="number" min="0" max="5" placeholder="Rating">
                 <button class="options" id="addMovie">Add Movie</button>
             </div>
             <div class="column center parent">
