--- a/movies-dc.html
+++ b/movies-dc.html
@@ -9,8 +9,10 @@
 </head>
 <body>
 <div class="page-wrapper">
+<!--loading screen-->
     <div class="page"></div>
     <div id="loading"></div>
+<!--header-->
     <div class="container header">
         <div class="row full-width">
             <div class="column left">
@@ -22,6 +24,7 @@
             </div>
         </div>
     </div>
+<!--genre links-->
     <div class="container genre-container" id="movies">
         <p class="genre-link" data-genre="Action">Action</p>
         <p class="genre-link" data-genre="Comedy">Comedy</p>
@@ -29,15 +32,15 @@
         <p class="genre-link" data-genre="Horror">Horror</p>
         <p class="genre-link" data-genre="Sci-Fi">Sci-Fi</p>
     </div>
+<!--main content-->
     <div class="container grow">
         <div class="row grow">
             <div class="column movies-cards">
-                <div id='cards' class="mask card-layout">
-
-                </div>
+                <div id='cards' class="mask card-layout"></div>
             </div>
         </div>
     </div>
+<!--footer-->
     <div class="container footer">
         <div class="row grow">
             <div id="addInterface" class="column left foot">
