--- a/movies-dc.html
+++ b/movies-dc.html
@@ -53,6 +53,7 @@
                     <option value="SciFi">SciFi</option>
                     <option value="Horror">Horror</option>
                 </select>
+                <input class="options" id="rel-date" type="text" placeholder="Release Date: yyyy/mm/dd"/>
                 <input class="options" id="rating" type="number" min="0" max="5" placeholder="Rating">
                 <button class="options" id="addMovie">Add Movie</button>
             </div>
