styled backgrounds added update rating button, still working on functionality

--- a/movies-dc.html
+++ b/movies-dc.html
@@ -19,7 +19,7 @@
                 <h1>Movies</h1>
             </div>
             <div class="column right">
-                <label class="align" for="searchMovie">Search Movie</label>
+                <label class="align" for="searchMovie">Search Movie:</label>
                 <input class="options2" type="text" id="searchMovie">
             </div>
         </div>
